# converge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yaml
benchmarks/: local_task_throughput.py
converge/: __init__.py  __main__.py  cli.py
converge/coordination/: bidding.py  consensus.py  delegation.py  negotiation.py  pool_manager.py  task_manager.py
converge/core/: agent.py  capability.py  decisions.py  identity.py  message.py  pool.py  store.py  task.py  tools.py  topic.py
converge/extensions/crypto/: __init__.py  kdf.py  random.py  symmetric.py
converge/extensions/llm/: __init__.py  agent.py  anthropic.py  base.py  mistral.py  openai.py
converge/extensions/storage/: file.py  memory.py
converge/network/: discovery.py  identity_registry.py  network.py
converge/network/transport/: base.py  local.py  tcp.py  websocket.py
converge/observability/: logging.py  metrics.py  replay.py  tracing.py
converge/policy/: admission.py  governance.py  safety.py  trust.py
converge/runtime/: executor.py  loop.py  scheduler.py
docs/: Makefile  conf.py  glossary.md  index.md
docs/_static/: .gitkeep
docs/api/: coordination.md  core.md  extensions.md  index.md  network.md  observability.md  policy.md  project_reference.md  runtime.md
docs/architecture/: design.md  index.md  process_model.md
docs/guides/: scaling.md  security.md  store_backends.md
docs/user_guide/: cli_and_config.md  concepts.md  customization.md  extensions.md  index.md  installation.md  quickstart.md
tests/e2e/: test_chaos_claim_ttl.py  test_local_ping_pong.py  test_multi_agent_pool_discovery.py  test_restart_recovery.py  test_verified_receive.py
tests/integration/: test_cli_run.py  test_persistence.py  test_replay_runtime.py  test_runtime_coordination.py  test_runtime_discovery.py  test_tool_execution.py
tests/unit/: test_cli.py
tests/unit/coordination/: test_bidding.py  test_consensus.py  test_delegation.py  test_negotiation.py  test_pool_manager.py  test_task_manager.py
tests/unit/core/: test_agent.py  test_capability.py  test_identity.py  test_message.py  test_store.py  test_tools.py  test_topic.py
tests/unit/extensions/crypto/: test_crypto.py
tests/unit/extensions/llm/: test_agent.py  test_anthropic.py  test_mistral.py  test_openai.py  test_streaming.py
tests/unit/extensions/storage/: test_file.py  test_memory.py
tests/unit/network/: test_discovery.py  test_identity_registry.py  test_network.py
tests/unit/network/transport/: test_base.py  test_local.py  test_tcp.py
tests/unit/observability/: test_logging.py  test_metrics.py  test_replay.py  test_tracing.py
tests/unit/policy/: test_admission.py  test_governance.py  test_safety.py  test_trust.py
tests/unit/runtime/: test_executor.py  test_loop.py  test_scheduler.py
